[tool.poetry]
name = "employees-report"
version = "0.1.0"
description = ""
authors = ["olya <olga.goreva26@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
