[tool.poetry]
name = "employees-report"
version = "0.1.0"
description = ""
authors = ["olya <olga.goreva26@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
openpyxl = "^3.1.2"
pyxlsb = "^1.0.10"
pyarrow = "^15.0.0"
python-docx = "^1.1.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
exclude = [
    ".venv"
]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "PTH", # forcebly use Pathlib
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
